--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@prisma/extension-accelerate": "^1.0.0",
     "hono": "^4.3.3",
     "prisma": "^5.13.0",
     "uuid": "^9.0.1"
