--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "@prisma/extension-accelerate": "^1.0.0",
+    "@shobhnik13/zod_types": "^1.0.0",
     "hono": "^4.3.3",
     "prisma": "^5.13.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
